# tree-sitter-regex-unicode-js

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  index.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: escape sequences.txt  other.txt  quantifiers.txt
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c
