[package]
name = "tree-sitter-regex-unicode-js"
description = "Tree-sitter parser for JavaScript regular expression (Unicode patterns)"
version = "2.0.3"
keywords = [
  "javascript",
  "regex",
  "regexp",
  "tree-sitter",
  "parser",
  "lexer",
  "grammar"
]
categories = ["parsing", "text-editors"]
repository = "https://github.com/wizard04wsu/ts-regex-u-js"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
